Reload users after unlike

--- a/DatingApp-SPA/src/app/lists/lists.component.html
+++ b/DatingApp-SPA/src/app/lists/lists.component.html
@@ -17,7 +17,7 @@
 
   <div class="row">
     <div *ngFor="let user of users" class="col-sm-6 col-md-4 col-lg-4 col-xl-2">
-      <app-member-card [user]="user"></app-member-card>
+      <app-member-card [user]="user" (toggleFlag)="toggleLikeEmitter($event)"></app-member-card>
     </div>
   </div>
 
