--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="col-sm-4">
       <div class="card">
-        <img class="card-img-top img-thumbnail" src="{{user.photoUrl || '../../../assets/user.png'}}" alt="{{user.knownAs}}">
+        <img class="card-img-top img-thumbnail" src="{{getUserPhoto()}}" alt="{{user.knownAs}}">
         <div class="card-body">
           <div>
             <strong>Location:</strong>
@@ -26,15 +26,23 @@
         </div>
         <div class="card-footer">
           <div class="btn-group d-flex">
-            <button class="btn btn-primary w-100">Like</button>
-            <button class="btn btn-success w-100">Message</button>
+            <button (click)="toggleLikeUser()"
+              [ngClass]="user.isLikedByMe?'btn-success w-100':'btn-primary w-100'">
+              <span *ngIf="!user.isLikedByMe">
+                <i class="fa fa-heart"></i> Like</span>
+              <span *ngIf="user.isLikedByMe">
+                <i class="fa fa-heart"></i> Unlike</span>
+            </button>
+            <button class="btn btn-success w-100" (click)="selectTab(3)">
+              <i class="fa fa-envelope"></i> Message
+            </button>
           </div>
         </div>
       </div>
     </div>
     <div class="col-sm-8">
       <div class="tab-panel">
-        <tabset class="member-tabset">
+        <tabset class="member-tabset" #memberTabs>
           <tab heading="About {{user.knownAs}}">
             <h4>Description</h4>
             <p>{{user.introduction}}</p>
@@ -49,7 +57,7 @@
             <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
           </tab>
           <tab heading="Messages">
-            <p>Messages will go here</p>
+            <app-member-messages [recipientId]="user.id"></app-member-messages>
           </tab>
         </tabset>
       </div>
